# JavaCompiler

./: .gitignore  CMakeLists.txt  Nfa.cpp  README.md  State.cpp  State.h  lexical_input.txt  lexical_to_re_structure  main.cpp  sketch_RE_to_NFA  ui.cpp
lexical/: CMakeLists.txt  ContextFreeGrammar.cpp  ContextFreeGrammar.h  Dfa.cpp  Dfa.h  Lexical.cpp  Lexical.h  Nfa.cpp  Nfa.h  RegularDefinition.cpp  RegularDefinition.h  RegularExpression.cpp  RegularExpression.h  State.cpp  State.h  Symbol.cpp  Symbol.h  Token.cpp  Token.h  Transition.h  Visualiser.cpp  Visualiser.h  lexical_input.txt
report/: dfa.js  drawer.js  index.html  index.js
src/: Nfa.cpp  Nfa.h  RegularDefinition.cpp  RegularDefinition.h  RegularExpression.cpp  RegularExpression.h  Transition.cpp  Transition.h  lexical_input.txt  main.cpp
syntax/: CFG.txt  CMakeLists.txt  ContextFreeGrammar.cpp  ContextFreeGrammar.h  GrammarRule.cpp  GrammarRule.h  ParsingFunctions.h  ParsingTableGenerator.cpp  ParsingTableGenerator.h  PredictiveParser.cpp  PredictiveParser.h  Symbol.cpp  Symbol.h
test/: CMakeLists.txt
test/_lib/googletest/: CMakeLists.txt
test/_lib/googletest/cmake/: internal_utils.cmake
test/_lib/googletest/codegear/: gtest_link.cc
test/lexical_test/: CMakeLists.txt  DfaTest.cpp  NfaTest.cpp  ParsingTest.cpp  RegularDefinitionTest.cpp  RegularExpressionTest.cpp  VisualiserTest.cpp  basic_test.cpp
test/syntax_test/: CMakeLists.txt  ContextFreeGrammerTest.cpp  ParsingTableGeneratorTest.cpp  PredictiveParserTest.cpp  basic_test.cpp
ui/: bower.json  firsts_follows_table_output.html  index.html  package.json
ui/google-fonts/: fonts.css
ui/js/: init.js  phase-1.js
